--- a/css/styles.css
+++ b/css/styles.css
@@ -64,17 +64,27 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 /* line 4, ../sass/styles.scss */
-article {
-  width: 940px;
+body {
+  width: 960px;
   margin: 0px auto;
-  padding: 10px;
   -webkit-box-shadow: 0 0 20px #222222;
   -moz-box-shadow: 0 0 20px #222222;
   box-shadow: 0 0 20px #222222;
 }
 
-/* line 12, ../sass/styles.scss */
-section {
+/* line 14, ../sass/styles.scss */
+.box-container {
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 20px 10px;
+  min-height: 900px;
+}
+
+/* line 24, ../sass/styles.scss */
+.box {
+  position: absolute;
+  display: block;
   width: 200px;
   border: 1px solid gray;
 }
