--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,15 +1,30 @@
 
 @import "base";
 
-article {
-	width: 940px;
+body {
+	width: 960px;
 	margin: 0px auto;
-	padding: 10px;
 
 	@include box-shadow(0 0 20px #222);
 }
 
-section {
+article {
+}
+
+.box-container {
+	position: relative;
+
+	box-sizing: border-box;
+	width: 100%;
+	padding: 20px 10px;
+	min-height: 900px;
+	
+}
+
+.box {
+	position: absolute;
+	display: block;
+
 	width: 200px;
 	border: 1px solid gray;
 }
