--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,10 @@
-@import "compass/reset";
 @import "compass/css3";
+@import "compass/css3/transition";
 @import "compass/utilities";
 
+$gutter: 20px;
+
+// List of colours.
+$bg-colors:   (red   orange yellow green  blue   indigo violet pink);
+$fg-colors:   (white black  black  white  white  white  black  black);
+$link-colors: (blue  blue   blue   orange orange orange blue   blue);
